# flappy-bird-neuroevolution

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flappy.cpp
include/: AssetManager.h  Background.h  Bird.h  Game.h  Ground.h  Menu.h  Pipe.h  Renderable.h  utils.h
include/entity/: Background.h  Bird.h  Ground.h  Pipe.h  Renderable.h
include/gui/: Button.h
include/states/: CPUPlayState.h  FadeState.h  ModeSelectState.h  PlayState.h  State.h  StateStack.h  StateStackInterface.h  TitleScreenState.h  TrainState.h
src/: AssetManager.cpp  Background.cpp  Bird.cpp  Game.cpp  Ground.cpp  Menu.cpp  Pipe.cpp  Renderable.cpp  flappy.cpp
src/asset/: AssetManager.cpp
src/entity/: Background.cpp  Bird.cpp  Ground.cpp  Pipe.cpp  Renderable.cpp
src/gui/: Button.cpp
src/states/: CPUPlayState.cpp  FadeState.cpp  ModeSelectState.cpp  PlayState.cpp  StateStack.cpp  TitleScreenState.cpp  TrainState.cpp
